tests/integration/snapshots/test_verify_contract_display_name_shows_contract_id_hint.stderr.txt
Error: Contract Visible Simple not found in Acton.toml

It looks like you passed the contract display-name instead of the contract ID.

In Acton.toml this contract is configured as:
[contracts.simple_id]
           ^^^^^^^^^ contract ID to pass to Acton
display-name = "Visible Simple"
                ^^^^^^^^^^^^^^ display-name shown in logs/UI

Pass simple_id instead of Visible Simple.

Available contract IDs:
 simple_id
